예매하기부분 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
         <activity android:name=".Show.DetailShowActivity" />
         <activity android:name=".Main.MainActivity"/>
         <activity android:name=".reservation.ReservationActivity"/>
+        <activity android:name=".reservation.Date_reservation"/>
+
 
 
 
