마이페이지 파이어베이스로 데이터 받기와 나의 예약확인하기 액티비티 추가
나의 예약 부분만 하면됨

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".Main.MainActivity"/>
         <activity android:name=".reservation.ReservationActivity"/>
         <activity android:name=".reservation.Date_reservation"/>
+        <activity android:name=".Main.MybookActivity"/>
 
 
 
