--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <!-- android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-    android:theme="@style/Theme.MA01_20180943" -->
-
     <application
         android:allowBackup="false"
-
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -23,11 +18,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MA01_20180943"
         android:usesCleartextTraffic="true">
+
+        <activity android:name=".reservation.Seat_reservation"/>
         <activity android:name=".Main.MainMapActivity" />
         <activity android:name=".Bookmark.BookmarkMapActivity" />
         <activity android:name=".Show.ShowMapActivity" />
-        <activity android:name=".login.RegisterActivity"/>
-        <activity android:name=".login.LoginActivity"/>
+        <activity android:name=".login.RegisterActivity" />
+        <activity android:name=".login.LoginActivity" />
         <activity android:name=".login.FirstScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,10 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
-        <activity android:name=".member.MemberInitActivity"/>
+        <activity android:name=".member.MemberInitActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -49,22 +43,19 @@
         <activity android:name=".Bookmark.BookmarkActivity" />
         <activity android:name=".Review.AddReviewActivity" />
         <activity android:name=".Show.DetailShowActivity" />
-        <activity android:name=".Main.MainActivity"/>
-        <activity android:name=".reservation.ReservationActivity"/>
-        <activity android:name=".reservation.Date_reservation"/>
-        <activity android:name=".Main.MybookActivity"/>
-
-
-
+        <activity android:name=".Main.MainActivity" />
+        <activity android:name=".reservation.ReservationActivity" />
+        <activity android:name=".reservation.Date_reservation" />
+        <activity android:name=".Main.MybookActivity" />
 
         <receiver android:name=".Show.MyBroadcastReceiver" />
 
         <service
             android:name=".Main.FetchAddressIntentService"
-            android:exported="false"/>
+            android:exported="false" />
         <service
             android:name=".Main.FetchLatLngIntentService"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
